--- a/client/src/pages/Player.module.css
+++ b/client/src/pages/Player.module.css
@@ -163,6 +163,15 @@
     left: 0;
 }
 
+.videoContainer video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
 /* Controls Overlay */
 .controlsOverlay {
     position: absolute;
