--- a/client/src/components/anime/AnimeCard.module.css
+++ b/client/src/components/anime/AnimeCard.module.css
@@ -110,7 +110,8 @@
   composes: badge;
   top: var(--space-2);
   right: var(--space-2);
-  background-color: var(--success);
+  background-color: #60a5fa;
+  /* light baby blue */
   color: white;
 }
 
